--- a/C1_Object_Design.ipynb
+++ b/C1_Object_Design.ipynb
@@ -1,32 +1,98 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import pandas as pd"
+    "Chapter 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Creation of Python Class:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "NoteBook Case:\n",
+    "\n",
+    "Directory structure\n",
+    "\n",
+    "parent_directory/\n",
+    "\n",
+    "    notebook.py\n",
+    "    menu.py\n",
+    "    command_option.py  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/home/robert/Github/python3_object_oriented'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pwd"
+    "import datetime\n",
+    "last_id = 0\n",
+    "class Note:\n",
+    "    \"\"\"Represent a note in Notebook. Match against a string in searches and store tags for each note\"\"\"\n",
+    "    \n",
+    "    def __init__(self, memo, tags=''):\n",
+    "        \"\"\"initialize a note with memo and optional space tags + creation date/ unique id\"\"\"\n",
+    "        self.memo = memo\n",
+    "        self.tags = tags\n",
+    "        self.creation_tags = datetime.date.today()\n",
+    "        global last_id\n",
+    "        last_id += 1\n",
+    "        self.id = last_id\n",
+    "        \n",
+    "    def match(self, filter_note):\n",
+    "        \"\"\"Determine if this note matches the filter text. Return True if it matches, otherwise False\"\"\"\n",
+    "        return filter_note in self.memo or filter_note in self.tags"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Notebook:\n",
+    "    \"\"\"Represent a collection of notes that can be tagged, modified, and searched\"\"\"\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        \"\"\"Initialize a notebook with an empty list\"\"\"\n",
+    "        self.notes = []\n",
+    "        \n",
+    "    def new_note(self, memo, tags = ''):\n",
+    "        self.notes.append(Note(memo, tags))\n",
+    "        \n",
+    "    def modify_memo(self, note_id, memo):\n",
+    "        \"\"\"Find the note with the given_id and change the memo accordingly\"\"\"\n",
+    "        for note in self.notes:\n",
+    "            if note.id == note_id:\n",
+    "                note.memo = memo\n",
+    "                break\n",
+    "    \n",
+    "    def modify_tags(self, note_id, tags):\n",
+    "        for note in self.notes:\n",
+    "            if note.id == note_id:\n",
+    "                note.tags = tags\n",
+    "                break\n",
+    "                \n",
+    "    def search(self, filter_note):\n",
+    "        \"\"\"Find all notes that match the given filter\"\"\"\n",
+    "        return [note for note in self.notes if note.match(filter_note)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "modify_memo() and modify_tags() are almost the same. We can improve this further."
    ]
   },
   {
