feature: complete chapter 2 and start chapter 3: inheritance

--- a/C1_Object_Design.ipynb
+++ b/C1_Object_Design.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Chapter 2"
+    "# Chapter 2 Objects in Python"
    ]
   },
   {
@@ -93,6 +93,77 @@
    "metadata": {},
    "source": [
     "modify_memo() and modify_tags() are almost the same. We can improve this further."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _find_note(self, note_id):\n",
+    "    \"\"\"Locate the note with the note_id\"\"\"\n",
+    "    for note in self.notes:\n",
+    "        if note.id == note_id:\n",
+    "            return note\n",
+    "        \n",
+    "def modify_memo(self, note_id, memo):\n",
+    "    \"\"\"Find the note with given id and change the memo\"\"\"\n",
+    "    self._find_note(note_id).memo = memo\n",
+    "    \n",
+    "def modify_tags(self, note_id, tags):\n",
+    "    self._find_note(note_id).tags = tags"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chapter 3: Similiar Objects in Python3 (Inheritance)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Typical Inheritance:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MySubClass(object):\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Example Class Contact --> email, name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Contact:\n",
+    "    all_contacts = []\n",
+    "    \n",
+    "    def __init__(self, name, email):\n",
+    "        self.name = name\n",
+    "        self.email = email\n",
+    "        Contact.all_contacts.append(self)\n",
+    "        \n",
+    "class Supplier:\n",
+    "    def order(self, order):\n",
+    "        print(\"If this were a real system we would send\"\n",
+    "             \"'{}' order to be '{}'\".format(order, self.name))"
    ]
   },
   {
