feature: multi-inheritance

--- a/C1_Object_Design.ipynb
+++ b/C1_Object_Design.ipynb
@@ -167,6 +167,98 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Extending Built-in"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example 1\n",
+    "class ContactList(list):\n",
+    "    def search(self, name):\n",
+    "        \"\"\"\n",
+    "        Return all contacts that contain the search value in their name\n",
+    "        \"\"\"\n",
+    "        matching_contacts = []\n",
+    "        for contact in self:\n",
+    "            if name in contact.name:\n",
+    "                matching_contacts.append(contact)\n",
+    "        return matching_contacts\n",
+    "    \n",
+    "class Contact:\n",
+    "    all_contacts = ContactList()\n",
+    "    \n",
+    "    def __init__(self, name, email):\n",
+    "        self.name = name\n",
+    "        self.email = email\n",
+    "        self.all_contacts.append(self)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example 2\n",
+    "class LongNameDict(dict):\n",
+    "    def longest_key(self):\n",
+    "        longest = None\n",
+    "        for key in self:\n",
+    "            if not longest or len(key) > len(longest):\n",
+    "                longest = key\n",
+    "        return longest\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Overriding and super"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We can overriding any function like __init__() in another classes. However, this could make the code maintenance hard.\n",
+    "# We can use super() to execute the previous functions\n",
+    "class Friend(Contact):\n",
+    "    def __init__(self, name, email, phone):\n",
+    "        super().__init__(name, email)\n",
+    "        self.phone = phone"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Multi-inheritance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Mailsender:\n",
+    "    def send_mail(self, message):\n",
+    "        print(\"Sending mail to \" + self.email)\n",
+    "\n",
+    "class EmailableContact(Contact, Mailsender):\n",
+    "    pass\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
