feature: multi-inheritance completed

--- a/C1_Object_Design.ipynb
+++ b/C1_Object_Design.ipynb
@@ -259,11 +259,198 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Other options to complete multi-inheritance\n",
+    "1. create a single inheritance and add send_mail function to the subclass\n",
+    "2. create a standalone Python function \n",
+    "3. composition instead of inheritance\n",
+    "4. Monkey-patch\n",
+    "\n",
+    "One potential problem:\n",
+    "1. multi superclasses lead to unclearness"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "THE DIAMOND PROBLEM"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Solution One\n",
+    "class BaseClass:\n",
+    "    num_base_calls = 0\n",
+    "\n",
+    "    def call_me(self):\n",
+    "        print('Calling method on base class')\n",
+    "        self.num_base_calls += 1\n",
+    "\n",
+    "\n",
+    "class LeftSubClass(BaseClass):\n",
+    "    num_left_calls = 0\n",
+    "\n",
+    "    def call_me(self):\n",
+    "        BaseClass.call_me(self)\n",
+    "        print('Calling method on left base class')\n",
+    "        self.num_left_calls += 1\n",
+    "\n",
+    "\n",
+    "class RightSubClass(BaseClass):\n",
+    "    num_right_calls = 0\n",
+    "\n",
+    "    def call_me(self):\n",
+    "        BaseClass.call_me(self)\n",
+    "        print('Calling method on right base class')\n",
+    "        self.num_right_calls += 1\n",
+    "\n",
+    "\n",
+    "class Subclass(LeftSubClass, RightSubClass):\n",
+    "    num_sub_calls = 0\n",
+    "\n",
+    "    def call_me(self):\n",
+    "        LeftSubClass.call_me(self)\n",
+    "        RightSubClass.call_me(self)\n",
+    "        print('Calling method on sub class')\n",
+    "        self.num_sub_calls += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calling method on base class\n",
+      "Calling method on left base class\n",
+      "Calling method on base class\n",
+      "Calling method on right base class\n",
+      "Calling method on sub class\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = Subclass()\n",
+    "s.call_me()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solution: calling super()\n",
+    "class BaseClass:\n",
+    "    num_base_calls = 0\n",
+    "\n",
+    "    def call_me(self):\n",
+    "        print('Calling method on base class')\n",
+    "        self.num_base_calls += 1\n",
+    "\n",
+    "\n",
+    "class LeftSubClass(BaseClass):\n",
+    "    num_left_calls = 0\n",
+    "\n",
+    "    def call_me(self):\n",
+    "        super().call_me()\n",
+    "        print('Calling method on left base class')\n",
+    "        self.num_left_calls += 1\n",
+    "\n",
+    "\n",
+    "class RightSubClass(BaseClass):\n",
+    "    num_right_calls = 0\n",
+    "\n",
+    "    def call_me(self):\n",
+    "        super().call_me()\n",
+    "        print('Calling method on right base class')\n",
+    "        self.num_right_calls += 1\n",
+    "\n",
+    "\n",
+    "class Subclass(LeftSubClass, RightSubClass):\n",
+    "    num_sub_calls = 0\n",
+    "\n",
+    "    def call_me(self):\n",
+    "        super().call_me()\n",
+    "        print('Calling method on sub class')\n",
+    "        self.num_sub_calls += 1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calling method on base class\n",
+      "Calling method on right base class\n",
+      "Calling method on left base class\n",
+      "Calling method on sub class\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = Subclass()\n",
+    "s.call_me()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Right solution for multi-inheritance in Friend Class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Contact:\n",
+    "    all_contacts = []\n",
+    "    \n",
+    "    def __init__(self, name = '', email = '', **kwargs):\n",
+    "        super().__init__(**kwargs)\n",
+    "        self.name = name\n",
+    "        self.email = email\n",
+    "        self.all_contacts.append(self)\n",
+    "    \n",
+    "class AddressHolder:\n",
+    "    def __init__(self, street='', city='', state='', code='',\n",
+    "                **kwargs):\n",
+    "        super().__init__(**kwargs)\n",
+    "        self.street = street\n",
+    "        self.city = city\n",
+    "        self.state = state\n",
+    "        self.code = code\n",
+    "        \n",
+    "class Friend(Contact, AddressHolder):\n",
+    "    def __init__(self, phone, **kwargs):\n",
+    "        super().__init__(**kwargs)\n",
+    "        self.phone = phone"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A more transparent way of combining two disparate classes: using\n",
+    "    composition or one design pattern"
+   ]
   }
  ],
  "metadata": {
