--- a/C1_Object_Design.ipynb
+++ b/C1_Object_Design.ipynb
@@ -586,6 +586,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Container class has exactly one abstract class method to implement, \n",
+    " _ _contains_ _.\n",
+    " \n",
+    " Take OddContainers as an example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class OddContainer:\n",
+    "    def __contains__(self, x):\n",
+    "        if not isinstance(x, int) or not x % 2:\n",
+    "            return False\n",
+    "        return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import Container\n",
+    "odd_container = OddContainer()\n",
+    "isinstance(odd_container, Container)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
