--- a/C1_Object_Design.ipynb
+++ b/C1_Object_Design.ipynb
@@ -631,6 +631,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So without inheriting from __Container__ Class, __OddContainer__ is a __Container__ object."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
